# ProjectRED

./: .gitignore  README.md
OpenGL_Portfolio_Project_Red/: BUILDING.txt  CMakeLists.txt
OpenGL_Portfolio_Project_Red/example/: main.cpp  main.hpp
OpenGL_Portfolio_Project_Red/example/Bootstrap/: ExtendedWorld.cpp  ExtendedWorld.hpp
OpenGL_Portfolio_Project_Red/example/Shaders/: ColorFragmentShader.glsl  SimpleFragmentShader.glsl  SingleColorfragment.glsl
OpenGL_Portfolio_Project_Red/src/: SimpleVertexShader.vertexshader  main.cpp  main.hpp
OpenGL_Portfolio_Project_Red/src/Bootstrap/: Bootstrapper.cpp  Bootstrapper.hpp  IInitializable.hpp  Initializer.cpp  Initializer.hpp  World.cpp  World.hpp
OpenGL_Portfolio_Project_Red/src/Common/: shader.cpp  shader.hpp  text2D.cpp  texture.cpp
OpenGL_Portfolio_Project_Red/src/Logic/: GameTime.cpp  GameTime.hpp
